--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ flutter:
     - assets/images/applogo_bluebg.jpg
     - assets/images/applogo.jpg
     - assets/images/logo_rmvbg.jpg
+    - assets/images/Success.png
+
 
 
 
