--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
     - assets/images/applogo_bluebg.jpg
     - assets/images/applogo.jpg
     - assets/images/logo_rmvbg.jpg
-    - assets/images/Success.png
+    - assets/images/success.gif
 
 
 
