--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,10 +60,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
     - assets/images/applogo_bluebg.jpg
     - assets/images/applogo.jpg
     - assets/images/logo_rmvbg.jpg
-    - assets/images/success.gif
+    - assets/images/Success.png
+    - assets/images/Under_Construction.png
+
 
 
 
