--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,12 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+ # lottie: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +48,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,11 +69,14 @@ flutter:
     - assets/images/logo_rmvbg.jpg
     - assets/images/Success.png
     - assets/images/Under_Construction.png
+    - assets/images/waitingTime.png
+
+    #- assets/lottie/
 
 
 
 
-  # An image asset can refer to one or more resolution-specific "variants", see
+      # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
   # For details regarding adding assets from package dependencies, see
