--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^4.1.4
+  file_picker: ^6.1.1
   permission_handler: ^11.2.0
-
+  flutter_local_notifications: ^16.3.2
+  flutter_timezone: ^1.0.8
+  rxdart: ^0.27.7
 
 
   # The following adds the Cupertino Icons font to your application.
