--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_database: ^10.4.5
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.5.0
 
  # lottie: ^1.0.2
 
