Tejas gadge pushed backend reg

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,6 +35,13 @@ android {
         coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
+//            options {
+//                // Enable deprecation warnings
+//                compilerArgs << "-Xlint:deprecation"
+//                // Enable unchecked warnings
+//                compilerArgs << "-Xlint:unchecked"
+//            }
     }
 
     kotlinOptions {
