--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_database: ^10.4.5
   firebase_core: ^2.25.4
-  firebase_auth: ^4.5.0
+  firebase_auth: ^4.17.4
+  firebase_ui_firestore: ^1.6.2
+  cloud_firestore: ^4.15.4
+  firebase_storage: ^11.6.5
+  flutterfire_cli: ^0.2.7
 
  # lottie: ^1.0.2
 
