--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter_local_notifications: ^16.3.2
   flutter_timezone: ^1.0.8
   rxdart: ^0.27.7
-
+  mailer: ^6.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
