--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   flutter_timezone: ^1.0.8
   rxdart: ^0.27.7
   mailer: ^6.1.0
+  path_provider: ^2.1.3
+  url_launcher: ^6.0.9
+  open_file: ^3.0.3
+  syncfusion_flutter_pdf: ^25.1.39
+  pdf: ^3.10.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
